# r3dStarter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
